--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     networks:
       - backend
   redis:
-    image: redis:5.0
+    image: redis:6.2-alpine
     restart: always
     ports:
       - 6379:6379
