--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,12 +8,13 @@
     "removeComments": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "target": "es2021",
+    "target": "ES2020",
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["src/*"],
+      "tailwindcss": ["node_modules/tailwindcss"]
     },
     "incremental": true,
     "skipDefaultLibCheck": true,
